--- a/app/views/settings/about.html.haml
+++ b/app/views/settings/about.html.haml
@@ -1,6 +1,6 @@
 #about-us
   %div
-    =link_to image_tag("ekylong.png"), "http://www.ekylibre.org"
+    =link_to image_tag("ekylibre.png"), "http://www.ekylibre.org"
     %table.attribute-list
       -for p in @properties
         %tr
