--- a/app/assets/stylesheets/themes/tekyla/buttons.css.scss
+++ b/app/assets/stylesheets/themes/tekyla/buttons.css.scss
@@ -21,7 +21,7 @@ input[type="submit"], a.btn {
   border-style: solid;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
   background: $normal;
-  @include background-image(linear-gradient(lighten($normal, 4%), darken($normal, 4%)));
+  @include background-image(linear-gradient(lighten($normal, $default-lightness-variation), darken($normal, $default-lightness-variation)));
   @include box-shadow(0 1px 0 rgba(255, 255, 255, 0.2) inset);
   @include box-shadow(0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05));
   @include border-radius($buttons-radius);
