--- a/app/views/assets/show.html.haml
+++ b/app/views/assets/show.html.haml
@@ -6,6 +6,9 @@
 
 =attributes_list(@asset) do |l|
   -l.attribute :name
+  -l.attribute :depreciation_method
+  -l.attribute :depreciable_amount, :currency => true
+  -l.attribute :depreciated_amount, :currency => true
   -l.attribute :description
   -l.attribute :comment
   -l.attribute :started_on
