--- a/app/assets/stylesheets/themes/tekyla/config.css.scss
+++ b/app/assets/stylesheets/themes/tekyla/config.css.scss
@@ -77,6 +77,7 @@ $menu-text-height: 2 * ceil($fs-normal * 0.655);
 $default-border-radius: round($fs-normal/5);
 /* Variation from center to  */
 $default-lightness-variation: 5%;
+$default-gap: round($fs-normal * 0.55);
 $cell-background: mix($desktop-background, $base-color, 82%);
 $cell-background-current: mix($desktop-background, $base-color, 62%);
 
