--- a/app/views/assets/show.html.haml
+++ b/app/views/assets/show.html.haml
@@ -1,7 +1,6 @@
 
 =toolbar do |t|
   -t.edit(@asset)
-  -t.cede(@asset)
   -t.depreciate(@asset, :method => :post)
 
 =attributes_list(@asset) do |l|
@@ -9,10 +8,11 @@
   -l.attribute :depreciation_method
   -l.attribute :depreciable_amount, :currency => true
   -l.attribute :depreciated_amount, :currency => true
-  -l.attribute :description
-  -l.attribute :comment
+  -l.attribute :depreciation_percentage
   -l.attribute :started_on
   -l.attribute :stopped_on
+  -l.attribute :description
+  -l.attribute :comment
 
 =tabbox(:asset) do |tb|
   -tb.tab(:depreciations) do
