--- a/app/views/financial_years/show.html.haml
+++ b/app/views/financial_years/show.html.haml
@@ -2,6 +2,8 @@
   -t.compute_balances @financial_year, :method=>:post
   -t.print_balance_sheet @financial_year
   -t.print_income_statement @financial_year
+  -if @financial_year == @current_company.closable_financial_year
+    -t.close @financial_year
 
 %h2= tc 'general_informations'
 =attributes_list(@financial_year) do |l|
@@ -9,7 +11,6 @@
   -l.attribute :stopped_on
   -l.attribute :closed
   -l.attribute :code
-
 
 %h2
   -if @financial_year.closed
